[package]
name = "generative-art-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
egui-macroquad = "0.12.0"
rand = "0.8.4"
rand_chacha = "0.3.1"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.dev]
opt-level = 'z'       # Optimize for size.
strip = true        # Strip symbols from binary*
